--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,50 +1,19 @@
 {
+  "compileOnSave": false,
   "compilerOptions": {
-    "target": "es5",
-    "module": "es2015",
-    "moduleResolution": "node",
+    "outDir": "./dist/out-tsc",
     "sourceMap": true,
+    "declaration": false,
+    "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "allowSyntheticDefaultImports": true,
-    "noEmitHelpers": true,
-    "importHelpers": true,
-    "strictNullChecks": false,
-    "baseUrl": "./src",
-    "removeComments": false,
-    "skipLibCheck": true,
-    "paths": {
-      "@angular/*": ["node_modules/@angular/*"]
-    },
+    "target": "es5",
+    "typeRoots": [
+      "node_modules/@types"
+    ],
     "lib": [
       "es2015",
       "dom"
-    ],
-    "types": [
-      "node",
-      "jquery",
-      "hammerjs"
-    ],
-    "typeRoots" : ["./node_modules/@types"]
-  },
-  "awesomeTypescriptLoaderOptions": {
-    "forkChecker": true,
-    "useWebpackText": true
-  },
-  "include": [
-    "src/**/*"
-  ],
-  "exclude": [
-    "node_modules",
-    "public",
-    "build",
-    "backend",
-    "src/**/*.spec.ts",
-    "src/**/*.e2e.ts"
-  ],
-  "compileOnSave": false,
-  "buildOnSave": false,
-  "atom": {
-    "rewriteTsconfig": false
+    ]
   }
 }
